--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,17 +1,29 @@
 {% extends 'base.html' %}
 {% import 'macros.html' as macros %}
+{% import 'bootstrap/wtf.html' as wtf %}
 
 {% block title %} 
-{{ super() }}
-Bienvenido 
+    {{ super() }}
+    Bienvenido 
 {% endblock %}
 
 {% block content %}
+    {% if username %}
+        <h1>Welcome, {{ username | capitalize }}</h1>
+    {% endif %}
+
     {% if user_ip %}
-        <h1>Welcome to TODO App py, tu IP es {{user_ip}}</h1>
+        <h3>Your IP {{user_ip}}</h3>
     {% else %}
         <a href="{{ url_for('index') }}">Ir al inicio</a>
     {% endif%}
+
+    <div class="container">
+
+        {{ wtf.quick_form(login_form) }}
+
+    </div>
+
 
     <ul>
         {% for todo in todos %}
